# monadic-printer

./: .gitignore  .travis.yml  LICENSE  README.md  monadic-printer.cabal  travis.yml
src/Text/: MonadicPrinter.hs
test/: Spec.hs
