name:                monadic-printer
version:             0.1.0.0
synopsis:            Log and write things with do-notation.
description:         Please see README.md
homepage:            http://github.com/JustusAdam/monadic-printer#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam,
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with: GHC>=7.8

library
  hs-source-dirs:      src
  exposed-modules:     Text.MonadicPrinter
  build-depends:
      base >= 4.7 && < 5
    , text
    , string-conversions

  default-language:    Haskell2010
  ghc-options: -Wall

test-suite monadic-printer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monadic-printer
                     , hspec
                     , text
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/monadic-printer
